crates/ty_python_semantic/resources/mdtest/snapshots/string.md_-_String_annotations_-_Partially_deferred_a…_-_Python_less_than_3.1…_(5e6477d05ddea33f).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: string.md - String annotations - Partially deferred annotations - Python less than 3.14
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/string.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, TypeVar, Callable, Protocol, TypedDict, TYPE_CHECKING
 2 | 
 3 | class TD(TypedDict): ...
 4 | 
 5 | class P(Protocol):
 6 |     x: int
 7 | 
 8 | class Meta(type):
 9 |     def __or__(cls, other: str) -> Any:
10 |         return "wow, so fancy, bet type checkers can't handle this"
11 | 
12 | class UsesMeta(metaclass=Meta): ...
13 | 
14 | T = TypeVar("T")
15 | 
16 | # fmt: off
17 | def f(
18 |     # error: [unsupported-operator]
19 |     a: int | "Foo",
20 |     # error: [unsupported-operator]
21 |     b: int | "memoryview" | bytes,
22 |     # error: [unsupported-operator]
23 |     c: "TD" | None,
24 |     # error: [unsupported-operator]
25 |     d: "P" | None,
26 |     # fine: `TypeVar.__or__` accepts strings at runtime
27 |     e: T | "Foo",
28 |     # fine: _SpecialForm.__ror__` accepts strings at runtime
29 |     f: "Foo" | Callable[..., None],
30 |     # also fine due to the custom metaclass
31 |     g: UsesMeta | "Foo",
32 |     # error: [unsupported-operator]
33 |     h: None | None,
34 |     # error: [unresolved-reference] "SomethingUndefined"
35 |     # error: [unresolved-reference] "SomethingAlsoUndefined"
36 |     i: SomethingUndefined | SomethingAlsoUndefined,
37 |     # error: [unsupported-operator]
38 |     # error: [unsupported-operator]
39 |     j: list["int" | None] | "bytes",
40 | ):
41 |     reveal_type(a)  # revealed: int | Foo
42 |     reveal_type(b)  # revealed: int | memoryview[int] | bytes
43 |     reveal_type(c)  # revealed: TD | None
44 |     reveal_type(d)  # revealed: P | None
45 |     reveal_type(e)  # revealed: T@f | Foo
46 |     reveal_type(f)  # revealed: Foo | ((...) -> None)
47 |     reveal_type(g)  # revealed: UsesMeta | Foo
48 |     reveal_type(h)  # revealed: None
49 |     reveal_type(i)  # revealed: Unknown
50 | 
51 | # fmt: on
52 | 
53 | class Foo: ...
54 | 
55 | # error: [unsupported-operator]
56 | X = list["int" | None]
57 | 
58 | if TYPE_CHECKING:
59 |     bar: "int" | "None"
60 |     def foo(x: "int" | "None"): ...
61 | 
62 |     class Bar:
63 |         # no error because this annotation is resolved inside a scope
64 |         # fully defined inside an `if TYPE_CHECKING` block
65 |         def f(x: "int" | "None"): ...
```

# Diagnostics

```
error[unresolved-import]: Module `typing` has no member `TYPE_CHECKING`
 --> src/mdtest_snippet.py:1:65
  |
1 | from typing import Any, TypeVar, Callable, Protocol, TypedDict, TYPE_CHECKING
  |                                                                 ^^^^^^^^^^^^^

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:19:8
   |
19 |     a: int | "Foo",
   |        ---^^^-----
   |        |     |
   |        |     Has type `Literal["Foo"]`
   |        Has type `<class 'int'>`
info: All parameter annotations are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just certain elements

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:21:8
   |
21 |     b: int | "memoryview" | bytes,
   |        ---^^^------------
   |        |     |
   |        |     Has type `Literal["memoryview"]`
   |        Has type `<class 'int'>`
info: All parameter annotations are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just certain elements

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:33:8
   |
33 |     h: None | None,
   |        ^^^^^^^^^^^ Both operands have type `None`
info: All parameter annotations are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line

```

```
error[unresolved-reference]: Name `SomethingUndefined` used when not defined
  --> src/mdtest_snippet.py:36:8
   |
36 |     i: SomethingUndefined | SomethingAlsoUndefined,
   |        ^^^^^^^^^^^^^^^^^^

```

```
error[unresolved-reference]: Name `SomethingAlsoUndefined` used when not defined
  --> src/mdtest_snippet.py:36:29
   |
36 |     i: SomethingUndefined | SomethingAlsoUndefined,
   |                             ^^^^^^^^^^^^^^^^^^^^^^

```

```
error[unsupported-operator]: Unsupported `|` operation
  --> src/mdtest_snippet.py:39:8
   |
39 |     j: list["int" | None] | "bytes",
   |        ------------------^^^-------
   |        |                    |
   |        |                    Has type `Literal["bytes"]`
   |        Has type `<class 'list[int | None]'>`
info: All parameter annotations are evaluated at runtime by default on Python <3.14
info: Python 3.13 was assumed when inferring types because it was specified on the command line
help: Put quotes around the whole union rather than just certain elements

```
